@@ -4,6 +4,7 @@
 	(logview_scroll_and_focus_path), (log_repaint): When switching to
 	a log with new lines, scroll down to the new lines and show them in
 	bold.
+	(log_repaint): Handle things better (fixes screwups when switching logs).
 
 2005-11-16  Vincent Noel  <vincent.noel@gmail.com>
 
